--- a/Backend/Tiffinwala/src/main/resources/application.properties
+++ b/Backend/Tiffinwala/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Tiffinwala
 # MySQL Database Configuration
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/tiffinwala
+spring.datasource.url=jdbc:mysql://localhost:3306/p10_tiffinwala
 spring.datasource.username=root
 spring.datasource.password=root
 
