--- a/Backend/Tiffinwala/src/main/resources/application.properties
+++ b/Backend/Tiffinwala/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=p10_tiffinwala
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/p10_tiffinwala
 spring.datasource.username=root
-spring.datasource.password=Root@123
+spring.datasource.password=root
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
