--- a/Frontend/tiffinwala/package.json
+++ b/Frontend/tiffinwala/package.json
@@ -16,7 +16,7 @@
     "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3010 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
