--- a/Backend/TiffinwalaCrudService/TiffinwalaCrudService/src/main/resources/application.properties
+++ b/Backend/TiffinwalaCrudService/TiffinwalaCrudService/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-spring.application.name=TiffinwalaCrudService
+spring.application.name=p10_tiffinwala
+# MySQL Database Configuration
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/p10_tiffinwala
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Server Configuration
+server.port=8081
+
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=DEBUG
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
