--- a/Backend/TiffinwalaAuthService/TiffinwalaAuthService/src/main/resources/application.properties
+++ b/Backend/TiffinwalaAuthService/TiffinwalaAuthService/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Server Configuration
-server.port=8081
+server.port=8102
 
-# Logging Configuration
+# Logging ConfigurationA
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
