--- a/Frontend/tiffinwala/package.json
+++ b/Frontend/tiffinwala/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -14,7 +15,6 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4",
     "webpack-dev-server": "^5.2.0"
-    
   },
   "scripts": {
     "start": "set PORT=3010 && react-scripts start",
@@ -28,7 +28,7 @@
       "react-app/jest"
     ]
   },
-    "proxy": "http://localhost:8081",
+  "proxy": "http://localhost:8081",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -41,5 +41,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
