--- a/DotnetAPI/TWservice2/appsettings.json
+++ b/DotnetAPI/TWservice2/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "server=localhost;port=3306;database=p10_tiffinwala;user=root;password=root;"
+    },
+
+    "AllowedHosts": "*"
 }
