--- a/Frontend/tiffinwala/package.json
+++ b/Frontend/tiffinwala/package.json
@@ -9,6 +9,7 @@
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
