plan and tiffin update method updated

--- a/Backend/TiffinwalaCrudService/TiffinwalaCrudService/src/main/resources/application.properties
+++ b/Backend/TiffinwalaCrudService/TiffinwalaCrudService/src/main/resources/application.properties
@@ -33,3 +33,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
 logging.level.org.hibernate.type.descriptor.sql.BasicExtractor=ERROR
 
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
