--- a/DotnetAPI/TWservice2/appsettings.json
+++ b/DotnetAPI/TWservice2/appsettings.json
@@ -8,6 +8,21 @@
     "ConnectionStrings": {
         "DefaultConnection": "server=localhost;port=3306;database=p10_tiffinwala;user=root;password=root;"
     },
+    "spring": {
+        "application": {
+            "name": "TWservice2" // mention your app name . Dont use _ in name.
+        }
+    },
+    "eureka": {
+        "client": {
+            "serviceUrl": "http://localhost:8101/eureka/", //Eureka service
+            "shouldRegisterWithEureka": true,
+            "shouldFetchRegistry": false
+        },
+        "instance": {
+            "port": 9104 // mention your port no of http url
+        }
+    },
 
     "AllowedHosts": "*"
 }
