--- a/Backend/Discovery/src/main/resources/application.properties
+++ b/Backend/Discovery/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.application.name=Discovery
 server.port=8101
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8101/eureka/
+
+      
+      eureka.client.serviceUrl.defaultZone=http://localhost:8101/eureka/
+      
